--- a/app/src/main/res/layout/activity_edit_card.xml
+++ b/app/src/main/res/layout/activity_edit_card.xml
@@ -215,7 +215,7 @@
                             android:fontFamily="@font/opensans_semibold"
                             android:textColorHint="@color/light_gray"
                             android:imeOptions="actionNext"
-                            android:inputType="text|textCapSentences"
+                            android:inputType="textVisiblePassword|textCapSentences"
                             android:maxLength="100"
                             android:maxLines="1"
                             android:padding="@dimen/_14sdp"
@@ -276,7 +276,7 @@
                             android:fontFamily="@font/opensans_semibold"
                             android:textColorHint="@color/light_gray"
                             android:imeOptions="actionNext"
-                            android:inputType="text|textCapSentences"
+                            android:inputType="textVisiblePassword|textCapSentences"
                             android:maxLength="100"
                             android:maxLines="1"
                             android:padding="@dimen/_14sdp"
@@ -311,7 +311,7 @@
                             android:fontFamily="@font/opensans_semibold"
                            android:textColorHint="@color/light_gray"
                             android:imeOptions="actionNext"
-                            android:inputType="text|textCapSentences"
+                            android:inputType="textVisiblePassword|textCapSentences"
                             android:maxLength="50"
                             android:maxLines="1"
                             android:padding="@dimen/_14sdp"
