--- a/app/src/main/res/layout/activity_retrieve_email.xml
+++ b/app/src/main/res/layout/activity_retrieve_email.xml
@@ -116,7 +116,7 @@
                         android:digits="abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ"
                         android:fontFamily="@font/opensans_semibold"
                         android:imeOptions="actionNext"
-                        android:inputType="text|textCapSentences"
+                        android:inputType="textVisiblePassword|textCapSentences"
                         android:longClickable="false"
                         android:maxLength="30"
                         android:maxLines="1"
@@ -180,7 +180,7 @@
                         android:digits="abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ"
                         android:fontFamily="@font/opensans_semibold"
                         android:imeOptions="actionDone"
-                        android:inputType="text|textCapSentences"
+                        android:inputType="textVisiblePassword|textCapSentences"
                         android:longClickable="false"
                         android:maxLength="30"
                         android:maxLines="1"
