--- a/app/src/main/res/layout/activity_withdraw_payment_methods.xml
+++ b/app/src/main/res/layout/activity_withdraw_payment_methods.xml
@@ -30,4 +30,9 @@
         android:id="@+id/externalBank"
         layout="@layout/activity_add_external_bank_acc"
         android:visibility="gone" />
+
+    <include
+        android:id="@+id/firstError"
+        layout="@layout/activity_first_tym_fail"
+        android:visibility="gone" />
 </androidx.constraintlayout.widget.ConstraintLayout>
