--- a/app/src/main/res/layout/activity_business_tracker_account.xml
+++ b/app/src/main/res/layout/activity_business_tracker_account.xml
@@ -15,25 +15,29 @@
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:background="@drawable/bg_arc_shape"
-            android:paddingLeft="@dimen/_20sdp"
-            android:paddingRight="@dimen/_20sdp"
             >
-
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:background="@drawable/ic_coyni_backgrnd"
+                >
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:src="@drawable/ic_x"
+                android:layout_marginStart="@dimen/_21sdp"
                 android:layout_marginRight="@dimen/_10sdp"
                 android:layout_marginTop="@dimen/_44sdp"
-
                 />
+
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:src="@drawable/aplica_mdpi"
                 android:layout_gravity="center"
-                android:layout_marginBottom="@dimen/_22sdp"
                 />
+            </LinearLayout>
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -43,12 +47,20 @@
                 android:layout_gravity="center"
                 android:textColor="@color/primary_black"
                 android:layout_marginBottom="@dimen/_21sdp"
+                android:layout_marginTop="@dimen/_22sdp"
                 android:visibility="visible"
                 />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:paddingStart="@dimen/_21sdp"
+                android:paddingEnd="@dimen/_21sdp"
+                >
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Application completed!"
+                android:text="@string/application_completed"
                 android:fontFamily="@font/opensans_bold"
                 android:textSize="@dimen/_16ssp"
                 android:textColor="@color/black"
@@ -86,7 +98,7 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Company Information"
+                        android:text="@string/company_information"
                         android:textSize="@dimen/_12ssp"
                         android:fontFamily="@font/opensans_semibold"
                         android:textColor="@color/primary_black"
@@ -106,7 +118,7 @@
                     android:id="@+id/startTV"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Start"
+                    android:text="@string/start"
                     android:fontFamily="@font/opensans_semibold"
                     android:textSize="@dimen/_12ssp"
                     android:textColor="@color/primary_color"
@@ -153,7 +165,7 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="DBA Information "
+                        android:text="@string/dba_information"
                         android:textSize="@dimen/_12ssp"
                         android:fontFamily="@font/opensans_semibold"
                         android:textColor="@color/primary_black"
@@ -162,7 +174,7 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Incomplete"
+                        android:text="@string/incomplete"
                         android:textSize="@dimen/_11ssp"
                         android:fontFamily="@font/opensans_regular"
                         android:textColor="@color/dark_grey"
@@ -221,7 +233,7 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Beneficial Owner"
+                        android:text="@string/beneficial_owner"
                         android:textSize="@dimen/_12ssp"
                         android:fontFamily="@font/opensans_semibold"
                         android:textColor="@color/primary_black"
@@ -289,7 +301,7 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Add Bank Account"
+                        android:text="@string/add_bank_account"
                         android:textSize="@dimen/_12ssp"
                         android:fontFamily="@font/opensans_semibold"
                         android:textColor="@color/primary_black"
@@ -356,7 +368,7 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Merchant’s Agreement"
+                        android:text="@string/merchant_s_agreement"
                         android:textSize="@dimen/_12ssp"
                         android:fontFamily="@font/opensans_semibold"
                         android:textColor="@color/primary_black"
@@ -411,11 +423,11 @@
                     android:layout_marginBottom="@dimen/_13sdp"
                     android:fontFamily="@font/opensans_bold"
                     android:gravity="center"
-                    android:text="Review Application"
+                    android:text="@string/review_application"
                     android:textSize="@dimen/_12ssp"
                     android:textColor="@color/white" />
             </androidx.cardview.widget.CardView>
-
+            </LinearLayout>
         </LinearLayout>
     </ScrollView>
 </LinearLayout>
