--- a/app/src/main/res/layout/activity_dbaddress.xml
+++ b/app/src/main/res/layout/activity_dbaddress.xml
@@ -5,12 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:theme="@style/Theme.MaterialComponents.DayNight.DarkActionBar"
->
-<ScrollView
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:scrollbars="none">
+    android:theme="@style/Theme.MaterialComponents.DayNight.DarkActionBar">
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -59,6 +55,16 @@
                 android:text="DBA Information"
 
                 />
+            <ScrollView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:scrollbars="none"
+                >
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    >
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -447,7 +453,7 @@
                 android:layout_gravity="center"
                 android:layout_marginBottom="@dimen/_27sdp"
                 />
-
+                </LinearLayout>
+            </ScrollView>
         </LinearLayout>
-</ScrollView>
 </LinearLayout>
