Screens Design Add Payment Signet

--- a/app/src/main/res/layout/activity_select_withdraw_method.xml
+++ b/app/src/main/res/layout/activity_select_withdraw_method.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="@color/boxbackgroundgray"
     android:orientation="vertical"
-    tools:context=".SelectWithdrawMethodActivity">
+    tools:context=".view.business.SelectWithdrawMethodActivity">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
