--- a/app/src/main/res/layout/activity_select_payment_method.xml
+++ b/app/src/main/res/layout/activity_select_payment_method.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".SelectPaymentMethodActivity"
+    tools:context=".view.business.SelectPaymentMethodActivity"
     android:orientation="vertical">
     <LinearLayout
     android:layout_width="match_parent"
