Business Tracker Account Screens & Validations

--- a/app/src/main/res/layout/activity_company_address2.xml
+++ b/app/src/main/res/layout/activity_company_address2.xml
@@ -399,7 +399,7 @@
             android:background="@drawable/disable_bg" />
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/countryTIL"
-            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+            style="@style/TextInputLayout.OutlinedBox"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/country"
