--- a/app/src/main/res/layout/activity_add_benifitial_owner_1.xml
+++ b/app/src/main/res/layout/activity_add_benifitial_owner_1.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
+    android:theme="@style/Theme.MaterialComponents.DayNight.DarkActionBar"
     tools:context=".view.business.AddBenifitialOwnerActivity1">
 
     <ScrollView
